# cyto

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: CI.yml  release.yml
crates/cyto/: CLAUDE.md  Cargo.toml  README.md
crates/cyto-cli/: CLAUDE.md  Cargo.toml  README.md
crates/cyto-cli/src/: cli.rs  commands.rs  download.rs  lib.rs  output.rs
crates/cyto-cli/src/detect/: mod.rs
crates/cyto-cli/src/ibu/: barcode.rs  cat.rs  count.rs  input.rs  mod.rs  reads.rs  sort.rs  umi.rs  view.rs
crates/cyto-cli/src/map/: crispr.rs  generic.rs  gex.rs  input.rs  map.rs  mod.rs  options.rs  probe.rs  runtime.rs
crates/cyto-cli/src/map2/: crispr.rs  gex.rs  mod.rs  options.rs
crates/cyto-cli/src/workflow/: mod.rs
crates/cyto-core/: Cargo.toml  README.md
crates/cyto-core/src/: aliases.rs  lib.rs
crates/cyto-core/src/counters/: bus.rs
crates/cyto-core/src/deduplicate/: mod.rs  umis.rs
crates/cyto-core/src/geometry/: bus.rs  r1.rs
crates/cyto-core/src/io/: features.rs  utils.rs  write.rs
crates/cyto-core/src/libraries/: crispr.rs  gex.rs  mod.rs  probe.rs
crates/cyto-core/src/mappers/: crispr.rs  errors.rs  flex.rs  generic.rs  gex.rs  mod.rs  probe.rs
crates/cyto-core/src/mappers/maps/: gex.rs  mod.rs  probe.rs
crates/cyto-core/src/metadata/: crispr.rs  flex.rs  gex.rs  mod.rs  probe.rs  target.rs
crates/cyto-core/src/statistics/: library.rs  mapping_statistics.rs  mod.rs  processed_mapping_statistics.rs  statistics.rs
crates/cyto-download/: Cargo.toml
crates/cyto-download/src/: lib.rs
crates/cyto-download/tests/: extract.rs
crates/cyto-ibu-barcode-correct/: Cargo.toml  README.md
crates/cyto-ibu-barcode-correct/src/: channel_iter.rs  chunk.rs  lib.rs  stats.rs  whitelist.rs
crates/cyto-ibu-cat/: CLAUDE.md  Cargo.toml  README.md
crates/cyto-ibu-cat/src/: lib.rs
crates/cyto-ibu-count/: CLAUDE.md  Cargo.toml  README.md
crates/cyto-ibu-count/src/: dedup.rs  lib.rs
crates/cyto-ibu-reads/: CLAUDE.md  Cargo.toml  README.md
crates/cyto-ibu-reads/src/: lib.rs
crates/cyto-ibu-sort/: CLAUDE.md  Cargo.toml  README.md
crates/cyto-ibu-sort/src/: lib.rs
crates/cyto-ibu-umi-correct/: CLAUDE.md  Cargo.toml  README.md
crates/cyto-ibu-umi-correct/src/: lib.rs  parallel.rs  utils.rs
crates/cyto-ibu-view/: CLAUDE.md  Cargo.toml  README.md
crates/cyto-ibu-view/src/: lib.rs
crates/cyto-io/: CLAUDE.md  Cargo.toml  README.md
crates/cyto-io/src/: feature.rs  lib.rs  utils.rs  write.rs
crates/cyto-map/: CLAUDE.md  Cargo.toml  README.md
crates/cyto-map/src/: crispr.rs  detect.rs  generic.rs  geometry.rs  gex.rs  implementor.rs  implementor_probe.rs  lib.rs  processor.rs  processor_unprobed.rs  run.rs  stats.rs  utils.rs
crates/cyto-map/src/mapper/: biject.rs  crispr.rs  gex.rs  mod.rs  probe.rs  umi.rs  whitelist.rs
crates/cyto-map/src/utils/: find.rs  paths.rs
crates/cyto-map/src/v2/: geometry.rs  mod.rs  processor.rs  run.rs  stats.rs  utils.rs
crates/cyto-map/src/v2/mapper/: biject.rs  crispr.rs  gex.rs  mod.rs  probe.rs  umi.rs  whitelist.rs
crates/cyto-map/tests/: detect_integration.rs
crates/cyto-view/: Cargo.toml  README.md
crates/cyto-view/src/: lib.rs
crates/cyto-workflow/: CLAUDE.md  Cargo.toml  README.md
crates/cyto-workflow/src/: crispr.rs  gex.rs  lib.rs  timing.rs  utils.rs
crates/cyto/src/: logging.rs  main.rs
cyto/: Cargo.toml
cyto-cli/: Cargo.toml
cyto-cli/src/: cli.rs  commands.rs  main.rs  output.rs  progress.rs  view.rs
cyto-cli/src/cli/: commands.rs  crispr.rs  flex.rs  geometry.rs  map.rs  mod.rs  output.rs  view.rs
cyto-cli/src/cli/ibu/: correct.rs  count.rs  input.rs  mod.rs  sort.rs  umi.rs  view.rs
cyto-cli/src/cli/map/: crispr.rs  flex.rs  generic.rs  geometry.rs  input.rs  mod.rs  probe.rs  runtime.rs
cyto-cli/src/cli/workflow/: mod.rs
cyto-cli/src/commands/: bus.rs  mod.rs  view.rs
cyto-cli/src/commands/ibu/: correct.rs  count.rs  mod.rs  sort.rs  umi.rs  utils.rs  view.rs
cyto-cli/src/commands/map/: crispr.rs  flex.rs  generic.rs  generic_binseq.rs  generic_paraseq.rs  generic_probe.rs  generic_probe_paraseq.rs  implementor.rs  implementor_probe.rs  mod.rs
cyto-cli/src/commands/map/utils/: find.rs  mod.rs  paths.rs
cyto-cli/src/commands/utils/: paths.rs
cyto-cli/src/commands/workflow/: crispr.rs  flex.rs  mod.rs  utils.rs
cyto-cli/src/ibu/: barcode.rs  mod.rs
cyto-cli/src/io/: mod.rs  utils.rs  write.rs
cyto-cli/src/map/: crispr.rs  flex.rs  generic.rs  geometry.rs  input.rs  mod.rs
cyto-core/: Cargo.toml
cyto-core/src/: lib.rs
cyto-core/src/counters/: counter.rs  mod.rs  probe.rs  tracked_index.rs
cyto-core/src/deduplicate/: mod.rs  umis.rs
cyto-core/src/io/: mod.rs  paired.rs
cyto-core/src/libraries/: crispr.rs  flex.rs  generic.rs  probe.rs
cyto-core/src/mappers/: crispr.rs  errors.rs  flex.rs  generic.rs  mapper.rs  mod.rs  probe.rs
cyto-core/src/mappers/maps/: flex.rs  generic.rs  probe.rs
cyto-core/src/metadata/: mod.rs  probe.rs
cyto-core/src/statistics/: mapping_statistics.rs  mod.rs  runtime.rs
cyto-ibu-barcode-correct/: Cargo.toml
cyto-ibu-barcode-correct/src/: lib.rs
cyto-ibu-count/: Cargo.toml
cyto-ibu-sort/: Cargo.toml
cyto-ibu-sort/src/: lib.rs
cyto-ibu-view/: Cargo.toml
cyto-ibu-view/src/: lib.rs
cyto-io/src/: utils.rs
cyto-map/: Cargo.toml
cyto-map/src/: crispr.rs  flex.rs  generic.rs  implementor.rs  implementor_probe.rs  lib.rs
cyto-map/src/utils/: find.rs  mod.rs  paths.rs
cyto-view/: Cargo.toml
cyto-view/src/: lib.rs
cyto-workflow/: Cargo.toml
data/: README.md  crispr.bq  probe-barcodes-fixed-rna-profiling.txt
resources/: flex-96-b1.txt  flex-v2-384-rc.txt
scmap-cli/: Cargo.toml
scmap-cli/src/: main.rs  progress.rs
scmap-cli/src/cli/: bus.rs  cli.rs  commands.rs  crispr.rs  flex.rs  geometry.rs  mod.rs  output.rs
scmap-cli/src/commands/: bus.rs  crispr.rs  flex.rs  generic.rs  mod.rs
scmap-cli/src/commands/utils/: mod.rs  paths.rs
scmap-cli/src/io/: mod.rs  write.rs
scmap-core/: Cargo.toml
scripts/: mtx_to_h5ad.py
src/: lib.rs  main.rs
(+67 files in other folders)
