[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
cyto-ibu-umi-correct = { path = "crates/cyto-ibu-umi-correct" }
cyto-ibu-barcode-correct = { path = "crates/cyto-ibu-barcode-correct" }
cyto-ibu-cat = { path = "crates/cyto-ibu-cat" }
cyto-ibu-count = { path = "crates/cyto-ibu-count" }
cyto-ibu-reads = { path = "crates/cyto-ibu-reads" }
cyto-ibu-sort = { path = "crates/cyto-ibu-sort" }
cyto-ibu-view = { path = "crates/cyto-ibu-view" }
cyto-core = { path = "crates/cyto-core" }
cyto-cli = { path = "crates/cyto-cli" }
cyto-view = { path = "crates/cyto-view" }
cyto-io = { path = "crates/cyto-io" }
cyto-map = { path = "crates/cyto-map" }
cyto-workflow = { path = "crates/cyto-workflow" }

anyhow = "1.0.100"
binseq = "0.7.8"
bitnuc = "0.3.0"
csv = "1.3.1"
env_logger = "0.11.8"
hashbrown = "0.16.0"
ibu = "0.2.1"
log = "0.4.28"
niffler = { version = "3.0.0", features = ["gz"] }
paraseq = "0.4.3"
parking_lot = "0.12"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1.0.145"

[profile.release]
debug = true

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_inception = "allow"
module_name_repetitions = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
struct_field_names = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
len_without_is_empty = "allow"
