[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
cyto-ibu-umi-correct = { path = "crates/cyto-ibu-umi-correct", version = "0.1.7" }
cyto-ibu-barcode-correct = { path = "crates/cyto-ibu-barcode-correct", version = "0.1.6" }
cyto-ibu-cat = { path = "crates/cyto-ibu-cat", version = "0.1.2" }
cyto-ibu-count = { path = "crates/cyto-ibu-count", version = "0.1.8" }
cyto-ibu-reads = { path = "crates/cyto-ibu-reads", version = "0.1.5" }
cyto-ibu-sort = { path = "crates/cyto-ibu-sort", version = "0.1.3" }
cyto-ibu-view = { path = "crates/cyto-ibu-view", version = "0.1.5" }
cyto-cli = { path = "crates/cyto-cli", version = "0.6.19" }
cyto-io = { path = "crates/cyto-io", version = "0.1.5" }
cyto-map = { path = "crates/cyto-map", version = "0.4.9" }
cyto-workflow = { path = "crates/cyto-workflow", version = "0.2.22" }

anyhow = "1.0.100"
binseq = "0.9.0"
bitnuc = "0.4.1"
csv = "1.4.0"
env_logger = "0.11.8"
hashbrown = "0.16.1"
ibu = "0.2.1"
log = "0.4.29"
niffler = { version = "3.0.0", features = ["gz"] }
paraseq = "0.4.8"
parking_lot = "0.12"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
# debug = true

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_inception = "allow"
module_name_repetitions = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
struct_field_names = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
len_without_is_empty = "allow"
