[package]
name = "cyto-cli"
version = "0.2.12"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
cyto = { path = "../cyto-core" }
anyhow = { workspace = true }
serde = { workspace = true }
bitnuc = { workspace = true }
binseq = { git = "ssh://git@github.com/noamteyssier/binseq", optional = true }
ibu = { workspace = true, features = ["serde"] }
spinoff = "0.8.0"
csv = "1.3.1"
rayon = "1.10.0"
num_cpus = "1.16.0"
niffler = "2.6.0"
parking_lot = "0.12.3"

[features]
binseq = ["dep:binseq"]
benchmarking = []

[[bin]]
name = "cyto"
path = "src/main.rs"

[lints]
workspace = true
