[package]
name = "cyto-cli"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
cyto-core = { workspace = true }
cyto-io = { workspace = true }
anyhow = { workspace = true }
binseq = { version = "0.5.4", optional = true }
ibu = { workspace = true, features = ["serde"] }
paraseq = { workspace = true }
num_cpus = "1.16.0"

[features]
default = ["binseq"]
binseq = ["dep:binseq"]
benchmarking = []

[lints]
workspace = true
