[package]
name = "cyto"
version = "0.2.10"
edition = "2021"

[dependencies]
csv = "1.3.0"
hashbrown = "0.15.1"
niffler = { version = "3.0.0", default-features = false, features = ["gz"] }
anyhow = { workspace = true }
serde = { workspace = true }
seq_io = "0.3.2"
serde_json = "1.0.132"
bitnuc = { workspace = true }
ibu = { workspace = true }
thiserror = "2.0.8"
disambiseq = "0.2.1"
flate2 = { version = "1.0.35", default-features = false, features = ["zlib-ng"] }


[lints]
workspace = true
