[package]
name = "cyto"
version = "0.2.13"
edition = "2021"

[dependencies]
csv = "1.3.0"
hashbrown = "0.15.1"
niffler = { version = "3.0.0", default-features = false, features = ["gz"] }
anyhow = { workspace = true }
serde = { version = "1", default-features = false, features = ["derive"] }
seq_io = "0.3.2"
serde_json = "1.0.132"
bitnuc = { workspace = true }
ibu = { workspace = true }
thiserror = "2.0.8"
disambiseq = "0.2.2"


[lints]
workspace = true
