[package]
name = "cyto-map"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bitnuc = { workspace = true }
cyto-core = { workspace = true }
cyto-cli = { workspace = true }
cyto-io = { workspace = true }
ibu = { workspace = true }
binseq = { version = "0.5.4", optional = true }
paraseq = "0.1.4"
parking_lot = "0.12"
indicatif = "0.17"


[features]
default = ["binseq"]
binseq = ["dep:binseq"]

[lints]
workspace = true
