[package]
name = "scmap-cli"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
scmap = { path = "../scmap-core" }
anyhow = { workspace = true }
serde = { workspace = true }
bitnuc = { workspace = true }
spinoff = "0.8.0"

[features]
benchmarking = []

[[bin]]
name = "scmap"
path = "src/main.rs"

[lints]
workspace = true
