[package]
name = "cyto-cli"
version = "0.5.3"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
binseq = { workspace = true }
cyto-core = { workspace = true }
cyto-io = { workspace = true }
ibu = { workspace = true }
log = { workspace = true }
paraseq = { workspace = true }
clap = { version = "4.5.40", features = ["derive"] }
num_cpus = "1.17.0"

[lints]
workspace = true
