[package]
name = "cyto-cli"
version = "0.6.19"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
description = "Ultra high-throughput processing of 10x-flex single-cell sequencing data"
repository = "https://github.com/arcinstitute/cyto"
categories = ["command-line-utilities", "science::bioinformatics"]
keywords = ["flex", "binseq", "single-cell", "probe", "sequencing"]

[dependencies]
anyhow = { workspace = true }
binseq = { workspace = true }
cyto-core = { workspace = true }
cyto-io = { workspace = true }
ibu = { workspace = true }
log = { workspace = true }
paraseq = { workspace = true }
clap = { version = "4.5.54", features = ["derive"] }
num_cpus = "1.17.0"

[lints]
workspace = true
