[package]
name = "cyto-core"
version = "0.4.5"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bitnuc = { workspace = true }
csv = { workspace = true }
ibu = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

regex = "1.12.2"

thiserror = "2.0.17"
disambiseq = "0.2.2"


[lints]
workspace = true
