[package]
name = "cyto-core"
version = "0.4.6"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
description = "Ultra high-throughput processing of 10x-flex single-cell sequencing data"
repository = "https://github.com/arcinstitute/cyto"
categories = ["command-line-utilities", "science::bioinformatics"]
keywords = ["flex", "binseq", "single-cell", "probe", "sequencing"]

[dependencies]
anyhow = { workspace = true }
bitnuc = { workspace = true }
csv = { workspace = true }
ibu = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

regex = "1.12.2"

thiserror = "2.0.18"
disambiseq = "0.2.2"


[lints]
workspace = true
