[package]
name = "cyto-download"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
description = "Ultra high-throughput processing of 10x-flex single-cell sequencing data"
repository = "https://github.com/arcinstitute/cyto"
categories = ["command-line-utilities", "science::bioinformatics"]
keywords = ["flex", "binseq", "single-cell", "probe", "sequencing"]

[dependencies]
anyhow = { workspace = true }
cyto-cli = { workspace = true }
log = { workspace = true }

dirs = "6.0.0"
flate2 = "1.1.9"
reqwest = { version = "0.13.2", features = ["blocking"] }
tar = "0.4.45"

[lints]
workspace = true
