[package]
name = "cyto-ibu-barcode-correct"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bitnuc = { workspace = true }
cyto-cli = { workspace = true }
cyto-io = { workspace = true }
ibu = { workspace = true }
log = { workspace = true }
niffler = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

bitnuc-mismatch = "0.1.2"

[lints]
workspace = true
