[package]
name = "cyto-ibu-count"
version = "0.1.7"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bitnuc = { workspace = true }
csv = { workspace = true }
cyto-cli = { workspace = true }
cyto-core = { workspace = true }
cyto-io = { workspace = true }
ibu = { workspace = true }
log = { workspace = true }
hashbrown = { workspace = true }

gzp = "2.0.0"

[lints]
workspace = true
