[package]
name = "cyto-ibu-count"
version = "0.1.8"
edition = "2024"
license = "BSD-3-Clause"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
description = "Ultra high-throughput processing of 10x-flex single-cell sequencing data"
repository = "https://github.com/arcinstitute/cyto"
categories = ["command-line-utilities", "science::bioinformatics"]
keywords = ["flex", "binseq", "single-cell", "probe", "sequencing"]

[dependencies]
anyhow = { workspace = true }
bitnuc = { workspace = true }
csv = { workspace = true }
cyto-cli = { workspace = true }
cyto-core = { workspace = true }
cyto-io = { workspace = true }
ibu = { workspace = true }
log = { workspace = true }
hashbrown = { workspace = true }
anndata = { workspace = true }
anndata-hdf5 = { workspace = true }
nalgebra-sparse = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
gzp = "2.0.2"

[lints]
workspace = true
