[package]
name = "cyto-ibu-reads"
version = "0.1.4"
edition = "2024"
license = "BSD-3-Clause"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
description = "Ultra high-throughput processing of 10x-flex single-cell sequencing data"
repository = "https://github.com/arcinstitute/cyto"
categories = ["command-line-utilities", "science::bioinformatics"]
keywords = ["flex", "binseq", "single-cell", "probe", "sequencing"]

[dependencies]
anyhow = { workspace = true }
bitnuc = { workspace = true }
csv = { workspace = true }
cyto-cli = { workspace = true }
cyto-io = { workspace = true }
hashbrown = { workspace = true }
ibu = { workspace = true, features = ["serde"] }
log = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
