[package]
name = "cyto-ibu-umi-correct"
version = "0.1.4"
edition = "2024"

[dependencies]
cyto-cli = { workspace = true }
cyto-io = { workspace = true }
ibu = { workspace = true }
anyhow = { workspace = true }
bitnuc = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hashbrown = { workspace = true }

petgraph = "0.8.3"

[lints]
workspace = true

[dev-dependencies]
rand = "0.9.2"
