[package]
name = "cyto-ibu-umi-correct"
version = "0.2.1"
edition = "2024"
license = "BSD-3-Clause"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
description = "Ultra high-throughput processing of 10x-flex single-cell sequencing data"
repository = "https://github.com/arcinstitute/cyto"
categories = ["command-line-utilities", "science::bioinformatics"]
keywords = ["flex", "binseq", "single-cell", "probe", "sequencing"]

[dependencies]
cyto-cli = { workspace = true }
cyto-io = { workspace = true }
ibu = { workspace = true }
anyhow = { workspace = true }
bitnuc = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hashbrown = { workspace = true }

petgraph = "0.8.3"
crossbeam-channel = "0.5"

[lints]
workspace = true

[dev-dependencies]
rand = "0.10.0"
