[package]
name = "cyto-ibu-view"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bitnuc = { workspace = true }
csv = { workspace = true }
cyto-cli = { workspace = true }
cyto-io = { workspace = true }
ibu = { workspace = true, features = ["serde"] }

[lints]
workspace = true
