[package]
name = "cyto-map"
version = "0.4.8"
edition = "2024"
license = "BSD-3-Clause"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
description = "Ultra high-throughput processing of 10x-flex single-cell sequencing data"
repository = "https://github.com/arcinstitute/cyto"
categories = ["command-line-utilities", "science::bioinformatics"]
keywords = ["flex", "binseq", "single-cell", "probe", "sequencing"]

[dependencies]
anyhow = { workspace = true }
binseq = { workspace = true }
bitnuc = { workspace = true }
cyto-core = { workspace = true }
cyto-cli = { workspace = true }
cyto-io = { workspace = true }
ibu = { workspace = true }
log = { workspace = true }
paraseq = { workspace = true }
parking_lot = { workspace = true }

indicatif = "0.18.3"

[lints]
workspace = true
