[package]
name = "cyto-map"
version = "0.4.9"
edition = "2024"
license = "BSD-3-Clause"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
description = "Ultra high-throughput processing of 10x-flex single-cell sequencing data"
repository = "https://github.com/arcinstitute/cyto"
categories = ["command-line-utilities", "science::bioinformatics"]
keywords = ["flex", "binseq", "single-cell", "probe", "sequencing"]

[dependencies]
anyhow = { workspace = true }
binseq = { workspace = true }
bitnuc = { workspace = true }
csv = { workspace = true }
cyto-core = { workspace = true }
cyto-cli = { workspace = true }
cyto-io = { workspace = true }
ibu = { workspace = true }
log = { workspace = true }
paraseq = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

derive_more = { version = "2.1.1", features = ["add_assign"] }
indicatif = "0.18.3"
seqhash = "0.1.5"
regex = { version = "1.12.2" }

[lints]
workspace = true
