[package]
name = "cyto-workflow"
version = "0.2.21"
edition = "2024"
license = "BSD-3-Clause"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
description = "Ultra high-throughput processing of 10x-flex single-cell sequencing data"
repository = "https://github.com/arcinstitute/cyto"
categories = ["command-line-utilities", "science::bioinformatics"]
keywords = ["flex", "binseq", "single-cell", "probe", "sequencing"]

[dependencies]
anyhow = { workspace = true }
csv = { workspace = true }
cyto-cli = { workspace = true }
cyto-ibu-barcode-correct = { workspace = true }
cyto-ibu-count = { workspace = true }
cyto-ibu-reads = { workspace = true }
cyto-ibu-sort = { workspace = true }
cyto-ibu-umi-correct = { workspace = true }
cyto-map = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }

rayon = "1.11.0"
glob = "0.3.3"

[lints]
workspace = true
