[package]
name = "cyto"
version = "0.3.19"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
cyto-cli = { workspace = true }
cyto-ibu-umi-correct = { workspace = true }
cyto-ibu-view = { workspace = true }
cyto-ibu-barcode-correct = { workspace = true }
cyto-ibu-cat = { workspace = true }
cyto-ibu-count = { workspace = true }
cyto-ibu-reads = { workspace = true }
cyto-ibu-sort = { workspace = true }
cyto-io = { workspace = true }
cyto-map = { workspace = true }
cyto-view = { workspace = true }
cyto-workflow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

strip-ansi-escapes = "0.2.1"

[lints]
workspace = true
