[package]
name = "cyto"
version = "0.3.26"
edition = "2024"
license = "BSD-3-Clause"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
description = "Ultra high-throughput processing of 10x-flex single-cell sequencing data"
repository = "https://github.com/arcinstitute/cyto"
categories = ["command-line-utilities", "science::bioinformatics"]
keywords = ["flex", "binseq", "single-cell", "probe", "sequencing"]


[dependencies]
anyhow = { workspace = true }
cyto-cli = { workspace = true }
cyto-ibu-umi-correct = { workspace = true }
cyto-ibu-view = { workspace = true }
cyto-ibu-barcode-correct = { workspace = true }
cyto-ibu-cat = { workspace = true }
cyto-ibu-count = { workspace = true }
cyto-ibu-reads = { workspace = true }
cyto-ibu-sort = { workspace = true }
cyto-io = { workspace = true }
cyto-map = { workspace = true }
cyto-view = { workspace = true }
cyto-workflow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

strip-ansi-escapes = "0.2.1"

[lints]
workspace = true
